# asic-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RESEARCH.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.claude/agents/: asic-mcp-expert.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  test.yml
examples/: claude_desktop_config_all_three.json  claude_desktop_config_local.json  demo_prompts.md
src/asic_mcp/: __init__.py  cache.py  catalog.py  client.py  curated.py  discovery.py  models.py  parquet_cache.py  parsing.py  server.py  shaping.py
src/asic_mcp/data/curated/: ASIC_AFS_AUTH_REP.yaml  ASIC_AFS_LICENSEE.yaml  ASIC_AUDITORS.yaml  ASIC_BANNED_ORGS.yaml  ASIC_BANNED_PERSONS.yaml  ASIC_BUSINESS_NAMES.yaml  ASIC_COMPANIES.yaml  ASIC_CREDIT_LICENSEE.yaml  ASIC_CREDIT_REPRESENTATIVE.yaml  ASIC_FINANCIAL_ADVISERS.yaml  ASIC_LIQUIDATOR.yaml  ASIC_SHORT_POSITIONS.yaml  ASIC_SMSF_AUDITORS.yaml
tests/: conftest.py  test_cache.py  test_client.py  test_concurrency.py  test_curated.py  test_dataset_specific.py  test_df_cache.py  test_discovery.py  test_edge_inputs.py  test_live.py  test_parquet_cache.py  test_parsing_asic.py  test_prewarm.py  test_register_shape.py  test_resilience.py  test_server_validation.py  test_streaming_business_names.py  test_streaming_companies.py
tests/fixtures/: asic_afs_auth_rep.csv  asic_afs_licensee.csv  asic_banned_orgs.csv  asic_banned_persons.csv  asic_credit_licensee.csv  asic_financial_advisers.csv  asic_liquidator.csv
