[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asic-mcp"
version = "0.6.9"
description = "MCP server for Australian Securities and Investments Commission registers. Plain-English access to financial advisers, AFS licensees, credit licensees, banned and disqualified persons and organisations, and registered liquidators via data.gov.au."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harry Vass" }]
keywords = [
    "mcp", "model-context-protocol", "claude", "fastmcp",
    "asic", "financial-advisers", "afs-licensee", "credit-licensee", "registers",
    "australia", "australian", "public-data", "government-data", "data-gov-au",
    "fintech", "regtech", "compliance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0,<4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rapidfuzz>=3.9",
    "pandas>=2.2,<3",
    "openpyxl>=3.1",
    "aiosqlite>=0.20",
    "PyYAML>=6.0",
    "aus-identity>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
asic-mcp = "asic_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Bigred97/asic-mcp"
Documentation = "https://github.com/Bigred97/asic-mcp#readme"
Repository = "https://github.com/Bigred97/asic-mcp"
Issues = "https://github.com/Bigred97/asic-mcp/issues"
Changelog = "https://github.com/Bigred97/asic-mcp/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/asic-mcp/"

[tool.hatch.build.targets.wheel]
packages = ["src/asic_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: hits real data.gov.au (downloads ASIC register CSV/XLSX files)"]
addopts = "-m 'not live'"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Defaults plus pyflakes-extras + pycodestyle warnings + pyupgrade. We don't
# enable line-length (E501) — long descriptive docstrings in curated YAML
# generators and test assertions outweigh the cost.
select = ["F", "E", "W", "UP", "I"]
ignore = [
    "E501",   # line too long — docstrings + test messages are intentionally long
    "UP015",  # `open(file, "r")` — unnecessary mode arg, but explicit is fine
]

[tool.ruff.lint.per-file-ignores]
# Tests can re-import for clarity and use fixture pollution patterns
"tests/*" = ["F401", "F811"]
